<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abc">

    </FrameLayout>

    <TextView
        android:id="@+id/tKana"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_top"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:text="@string/top_eki2_kana"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@id/tName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/top_eki2_name"
        android:textColor="?attr/editTextColor"
        app:layout_constraintBottom_toTopOf="@id/tEnglish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tKana"
        app:layout_constraintVertical_weight="2" />
    <!--よくわからないがandroid:textColor="?attr/editTextColorにしてみる"-->

    <TextView
        android:id="@+id/tEnglish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/top_eki2_english"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tName"
        app:layout_constraintVertical_weight="1"
        tools:ignore="SmallSp" />
    <!--    app:layout_constraintBottom_toTopOf="@id/fRecyclerView"-->

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/fRecyclerView"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:background="@drawable/border_bottom"-->
    <!--        android:scrollbars="vertical"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/adFrame"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/tEnglish" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/abc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/adFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tEnglish">
        <!--        android:background="@drawable/border"-->

        <TextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:text="a"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:text="b"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv1"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:id="@+id/adFrame"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abc">
        <!--        app:layout_constraintTop_toBottomOf="@id/fRecyclerView">-->

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111" />

        <!--test ca-app-pub-3940256099942544/6300978111 -->


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>